Fixed bug #68636 (setlocale no longer returns current value per category).